# wgsl-analyzer

./: Cargo.toml
crates/base_db/: Cargo.toml
crates/hir/: Cargo.toml
crates/hir_def/: Cargo.toml
crates/hir_ty/: Cargo.toml
crates/ide/: Cargo.toml
crates/ide_completion/: Cargo.toml
crates/parser/: Cargo.toml
crates/syntax/: Cargo.toml
crates/wgsl_analyzer/: Cargo.toml
crates/wgsl_formatter/: Cargo.toml
crates/wgsl_parser/: Cargo.toml
