[package]
name = "base_db"
version = "0.0.0"
edition = "2021"

[dependencies]
salsa = { workspace = true }
rowan = { workspace = true }
rustc-hash = "1.1"
syntax = { path = "../syntax" }
tracing = { workspace = true }
regex = { version = "1.10", default-features = false, features = ["std"] }

vfs = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
