[package]
name = "hir"
version = "0.0.0"
edition = "2021"

[dependencies]
base_db = { path = "../base_db" }
either = { workspace = true }
hir_def = { path = "../hir_def" }
hir_ty = { path = "../hir_ty" }
syntax = { path = "../syntax" }
tracing = { workspace = true }
la-arena = { workspace = true }
smallvec = { workspace = true }
