[package]
name = "hir_def"
version = "0.0.0"
edition = "2021"

[dependencies]
la-arena = { workspace = true }
salsa = { workspace = true }
syntax = { path = "../syntax" }
base_db = { path = "../base_db" }
smol_str = "0.2"
rustc-hash = "1.1"
tracing = { workspace = true }
either = { workspace = true }
smallvec = { workspace = true }
rowan = { workspace = true }
