[package]
name = "hir_ty"
version = "0.0.0"
edition = "2021"

[dependencies]
base_db = { path = "../base_db" }
hir_def = { path = "../hir_def" }

salsa = { workspace = true }
la-arena = { workspace = true }
either = { workspace = true }
rustc-hash = "1.1"
itertools = "0.12"
smallvec = { workspace = true }
