[package]
name = "ide"
version = "0.0.0"
edition = "2021"

[dependencies]
salsa = { workspace = true }
tracing = { workspace = true }

base_db = { path = "../base_db" }
hir_def = { path = "../hir_def" }
hir_ty = { path = "../hir_ty" }
hir = { path = "../hir" }
ide_completion = { path = "../ide_completion" }
syntax = { path = "../syntax" }
wgsl_formatter = { path = "../wgsl_formatter" }
rowan = { workspace = true }
lsp-types = "0.95"
vfs = { workspace = true }

expect-test = "1.4"
itertools = "0.12"
smol_str = "0.2"

naga11 = { package = "naga", version = "0.11", features = [
  "wgsl-in",
  "validate",
  "span",
] }
naga12 = { package = "naga", version = "0.12", features = [
  "wgsl-in",
  "validate",
  "span",
] }
naga13 = { package = "naga", version = "0.13", features = [
  "wgsl-in",
  "validate",
  "span",
] }
naga14 = { package = "naga", version = "0.14", features = [
  "wgsl-in",
  "validate",
  "span",
] }
naga19 = { package = "naga", version = "0.19", features = ["wgsl-in"] }
nagamain = { package = "naga", git = "https://github.com/gfx-rs/wgpu", rev = "152a94bc6c502226d9871f28e35db0b755ea35bf", features = [
  "wgsl-in",
] }
