[package]
name = "wgsl_analyzer"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "wgsl_analyzer"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
lsp-server = "0.7"
lsp-types = "0.95"
parking_lot = "0.12"
serde = "1.0"
serde_json = "1.0"
threadpool = "1.8.1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
salsa = { workspace = true }
rustc-hash = "1.1"

base_db = { path = "../base_db" }
hir_def = { path = "../hir_def" }
hir_ty = { path = "../hir_ty" }
hir = { path = "../hir" }
ide = { path = "../ide" }
ide_completion = { path = "../ide_completion" }

vfs = { workspace = true }
paths = { workspace = true }
text-edit = { workspace = true }
itertools = "0.12"
dissimilar = "1.0"
